去除多余引用，修正个别错误